Fix Scrollbars on /results

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,11 @@
     .hideOnSmallScreens {
         display: none !important;
     }
+
+    .StyledBox-sc-13pk1d4-0.cYihDV {
+        overflow: visible !important;
+    }
+
 }
 
 @media screen and (min-width: 810px) {
